cdebconf (0.50) UNRELEASED; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).

 -- Denis Barbier <barbier@debian.org>  Sat,  8 Nov 2003 21:25:29 +0100

cdebconf (0.49) unstable; urgency=low

  * Christian Perrier 
    - Update French translation.
  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po).
  * Alastair McKinstry
    - Change CMDSTATUS_BADPARAM code to 15, to disabiguate.
    - Add enum for command status codes to debconfclient.h
  * Ilgiz Kalmetev
    - Updated Russian translation. Closes: #219095.
  * Denis Barbier
    - Empty extended descriptions did produce extra vertical space, it is
      now fixed for all supported frontends.  Closes: #219072.
    - With the newt frontend, display of notes was corrupted when the
      extended description was shorter than the description.
      Closes: #218869.
    - Look for translated Listorder fields so that translators may decide
      not to sort Choices fields, e.g.
        Listorder-ja.UTF-8: none
      will prevent sorting in Japanese.
  * Joey Hess
    - Add myself, Petter, and Randolph to Uploaders.

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 14:16:54 -0500

cdebconf (0.48) unstable; urgency=low

  * Denis Barbier
    - Sort translated choices when a select/multiselect template contains
      a line Listorder: lexicographic
      If some Choices items must not be sorted, they can be prepended with
      an exclamation mark.  Adding a comment is a good idea to let
      translators know why this sign has been put here:
        _Choices: ${FOO}, !Other[ You only have to translate Other, remove the exclamation mark and this comment between brackets]
      Currently text, newt, slang and gtk frontends support this feature.
    - Fix a crash with the newt frontend when a boolean question has no
      default value. Closes: #215583.
    - Let cdebconf newt frontend looks like debconf dialog: short description