@@ -2,6 +2,8 @@ cdebconf (0.50) UNRELEASED; urgency=low
 
   * Peter Mann
     - Initial Slovak translation (sk.po).
+  * Denis Barbier
+    - Fix navigation with arrow keys in the newt frontend.  Closes: #218844.
 
  -- Denis Barbier <barbier@debian.org>  Sat,  8 Nov 2003 21:25:29 +0100
 
